# FrancoDB

./: .gitignore  CHECKPOINT_BUG_ANALYSIS.md  CLAUDE.md  CMAKE_TESTS_FINAL.md  CMakeLists.txt  COMPLETE_FIX_SUMMARY.md  FINAL_CLEANUP_COMPLETE.md  FINAL_FIX_SUMMARY.md  FIXES_APPLIED.md  INSTALLATION_GUIDE.md  INSTALLER_CLEANUP_SUMMARY.md  INSTALLER_PATHS_FIXED.md  README.md  REBUILD_SERVICE.md  TEST_SUITE_COMPLETE.md  installer.iss
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURAL_AUDIT.md  ARCHITECTURE_EXPLAINED.md  ChronosDB_AI_Layer_Documentation.docx  ChronosDB_AI_Layer_Documentation.md  ChronosDB_Full_Documentation.docx  ChronosDB_Full_Documentation.md  RECOVERY_ARCHITECTURE.md  encryption_key_explanation.md  file_structure_explanation.md  generate_docx.py  generate_full_docx.py  implementation_Phases  test_commands.txt  test_commands_comprehensive.txt
docs/documentation/: AI.md  BUG_FIXES_SUMMARY.md  CODE_CHANGES.md  COMPLETION_REPORT.md  DELIVERABLES_CHECKLIST.md  DOCUMENTATION_INDEX.md  ENTERPRISE_FEATURES.md  INDEX.md  (+18 more)
examples/: javascript_example.js  python_example.py
installers/: README.md
libaries/: francodb.js  francodb.py
src/: CMakeLists.txt  main.cpp
src/ai/: ai_manager.cpp  ai_scheduler.cpp  dml_observer.cpp  metrics_store.cpp
src/ai/immune/: anomaly_detector.cpp  immune_system.cpp  mutation_monitor.cpp  response_engine.cpp  threat_detector.cpp  user_profiler.cpp
src/ai/learning/: bandit.cpp  execution_plan.cpp  learning_engine.cpp  query_features.cpp  query_plan_optimizer.cpp
src/ai/temporal/: access_tracker.cpp  hotspot_detector.cpp  retention_manager.cpp  snapshot_scheduler.cpp  temporal_index_manager.cpp
src/buffer/: buffer_pool_manager.cpp  clock_replacer.cpp  lru_replacer.cpp
src/catalog/: catalog.cpp  index_info.cpp
src/cmd/server/: main.cpp
src/cmd/service/: service_wrapper.cpp
src/cmd/shell/: shell.cpp
src/common/: auth_manager.cpp  result_formatter.cpp  rid.cpp  type.cpp  value.cpp
src/execution/: ddl_executor.cpp  dml_executor.cpp  execution_engine.cpp  executor_registry.cpp
src/execution/executors/: ddl_executor.cpp  delete_executor.cpp  dml_executor.cpp  index_scan_executor.cpp  insert_executor.cpp  seq_scan_executor.cpp  system_executor.cpp  update_executor.cpp  user_executor.cpp
src/include/ai/: ai_config.h  ai_manager.h  ai_scheduler.h  dml_observer.h  metrics_store.h
src/include/ai/immune/: anomaly_detector.h  immune_system.h  mutation_monitor.h  response_engine.h  threat_detector.h  user_profiler.h
src/include/ai/learning/: bandit.h  execution_plan.h  learning_engine.h  query_features.h  query_plan_optimizer.h
src/include/ai/temporal/: access_tracker.h  hotspot_detector.h  retention_manager.h  snapshot_scheduler.h  temporal_index_manager.h
src/include/buffer/: buffer_pool_manager.h  clock_replacer.h  lru_replacer.h  page_guard.h  partitioned_buffer_pool_manager.h  replacer.h
src/include/catalog/: catalog.h  index_info.h
src/include/common/: auth_manager.h  config.h  crc32.h  exception.h  franco_net_config.h  logger.h  result_formatter.h  rid.h  session_context.h  type.h  value.h
src/include/concurrency/: lock_manager.h  transaction.h  transaction_manager.h
src/include/execution/: ddl_executor.h  dml_executor.h  execution_engine.h  execution_result.h  executor_context.h  executor_factory.h  predicate_evaluator.h  system_executor.h
src/include/execution/executors/: abstract_executor.h  delete_executor.h  index_scan_executor.h  insert_executor.h  join_executor.h  seq_scan_executor.h  update_executor.h
src/include/network/: chronos_server.h  connection_handler.h  database_registry.h  franco_client.h  franco_server.h  packet.h  protocol.h  session_context.h
src/include/parser/: advanced_statements.h  parser.h  statement.h  token.h
src/include/recovery/: checkpoint_manager.h  log_manager.h  log_record.h  recovery_manager.h  snapshot_manager.h  time_travel_engine.h
src/include/storage/: storage_interface.h
src/include/storage/disk/: disk_manager.h
src/include/storage/page/: page.h
src/include/storage/table/: column.h  schema.h  table_heap.h  table_page.h  tuple.h
src/include/web/: http_handler.h
src/network/: chronos_server.cpp  connection_handler.cpp  database_registry.cpp  franco_client.cpp  franco_server.cpp  protocol.cpp
src/parser/: lexer.cpp  parser.cpp
src/recovery/: checkpoint_manager.cpp  log_manager.cpp  recovery_manager.cpp  time_travel_engine.cpp
src/storage/disk/: disk_manager.cpp
src/storage/index/: b_plus_tree.cpp
src/storage/page/: b_plus_tree_internal_page.cpp  b_plus_tree_leaf_page.cpp
src/storage/table/: column.cpp  schema.cpp  table_heap.cpp  table_page.cpp  tuple.cpp
src/web/: http_handler.cpp
test/: CMAKE_TEST_GUIDE.md  CMakeLists.txt  README_TESTS.md  run_all_tests.cpp
test/ai/: test_ai_scheduler.cpp  test_anomaly_detector.cpp  test_dml_observer.cpp  test_hotspot_detector.cpp  test_metrics_store.cpp  test_query_optimizer.cpp  test_threat_detector.cpp  test_ucb1_bandit.cpp
test/buffer/: buffer_pool_test.cpp
test/concurrency/: threadpool_test.cpp  threadpool_write_read_test.cpp  transaction_test.cpp
test/execution/: column_tests.cpp  execution_test.cpp  foreign_key_tests.cpp  groupby_tests.cpp  index_execution_test.cpp  integration_tests.cpp  join_tests.cpp  limit_distinct_tests.cpp  orderby_tests.cpp
test/framework/: test_runner.h
test/modules/: module_tests_stub.cpp
test/network/: json_client_test.cpp
test/parser/: enterprise_parser_test.cpp  lexer_test.cpp  parser_test.cpp
test/recovery/: checkpoint_test.cpp  log_manager_test.cpp  recovery_examples.cpp  time_travel_test.cpp
test/sql/: orderby_tests.cpp
test/storage/: full_storage_system_test.cpp
test/storage/disk/: disk_recycle_test.cpp  disk_test.cpp
test/storage/index/: b_plus_tree_concurrent_test.cpp  b_plus_tree_split_test.cpp  b_plus_tree_test.cpp
test/storage/table/: table_heap_test.cpp  tuple_test.cpp
test/system/: consistency_client.cpp  francodb_system_test.cpp  stress_client.cpp
web-admin/: package.json
(+31 files in other folders)
